# bazeldeps

./: .bazelrc  .clang-format  BUILD  LICENSE  README.md  WORKSPACE  deps_printer.go
bazel/: BUILD.bazel  deps.go
calculator/: BUILD.bazel  calc.cc
git/: BUILD.bazel  git.go
math/: BUILD.bazel  add.cc  add.h  mul.cc  mul.h
proto/: BUILD  build.proto
