load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["deps.go"],
    importpath = "gitlab.com/minorhacks/bazeldeps/bazel",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:build_go_proto",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
